# consistency-models

./: .gitignore  README.md  pyproject.toml  storage  storage_ablette
configs/: default.yaml
eval/: eval_cd_fashionmnist.py  eval_ct_fashionmnist.py  label_coverage_ct_cd.py  sample_multistep_celeba_ct.py
inverse_problems_experiments/: colorize_celeba.py  inpaint_celeba.py  inpainting_fashionmnist.py  interpolation_fashionmnist.py  superresolution_fashionmnist.py
models/: cd_model_utils.py  ct_model_utils.py  teacher_utils.py
scripts/: train_mnist.py  train_toy_2d.py
src/: __init__.py  config.py
src/checkpoint/: __init__.py  io.py
src/consistency/: distillation.py  ema.py
src/consistency_models.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/datasets/: __init__.py  mnist.py  toy_2d.py
src/dynamics/: __init__.py  noise.py  ode_solver.py
src/evaluation/: __init__.py  evaluate.py
src/logging/: __init__.py  logging.py
src/loss/: __init__.py  distillation_loss.py
src/models/: __init__.py  layers.py  layerspp.py  mlp_time.py  ncsnpp.py  normalization.py  up_or_down_sampling.py
src/sampling/: __init__.py  consistency_sampler.py  toy_2d_sampler.py
src/training/: __init__.py  train_cd.py  train_ct_2d.py  train_diffusion_2d.py
tests/: test_ncsnpp.py
toy_experiments/: denoising_penalty_effect.py  paths_viz.py  train_cd.py  train_ct.py  train_edm_denoiser.py
training/: train_cd_fashionmnist.py  train_classifiier_fashionmnist.py  train_ct_celeba.py  train_ct_fashionmnist.py  train_teacher_fashionmnist.py
(+12 files in other folders)
